Updated Downloads page

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -55,45 +55,47 @@
 		<section class="blocks">
 			
 			<article class="block"><!-- Main Text block -->
-                <p>Click on the images below to download a printable copy of that design</p>
+                <p>Click on the images below to download a printable copy (PDF) of that design</p>
 
-<h2>11&Prime; &times; 17&Prime; Color Posters</h2>
+                <h2>11&Prime; &times; 17&Prime; Color Posters</h2>
 
-<p><a href="./Poster_1_1117.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_1_1117_Web1x.jpg 1x, Poster_1_1117_Web2x.jpg 2x"></figure></a>
-<a href="./Poster_2_1117.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_2_1117_Web1x.jpg 1x, Poster_2_1117_Web2x.jpg 2x"></figure></a>
-<a href="./Poster_3_1117.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_3_1117_Web1x.jpg 1x, Poster_3_1117_Web2x.jpg 2x"></figure></a></p>
+                <p><a href="./Poster_1_1117.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_1_1117_Web1x.jpg 1x, Poster_1_1117_Web2x.jpg 2x"></figure></a>
+                <a href="./Poster_2_1117.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_2_1117_Web1x.jpg 1x, Poster_2_1117_Web2x.jpg 2x"></figure></a>
+                <a href="./Poster_3_1117.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_3_1117_Web1x.jpg 1x, Poster_3_1117_Web2x.jpg 2x"></figure></a></p>
 
-<hr />
+                <hr />
 
-<h2>Letter Size (8.5&Prime; &times; 11&Prime;) Color Posters</h2>
+                <h2>Letter Size (8.5&Prime; &times; 11&Prime;) Color Posters</h2>
 
-<h3>English</h3>
+                <h3>English</h3>
 
-<p><a href="./Poster_1_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_1_Letter_Web1x.jpg 1x, Poster_1_Letter_Web2x.jpg 2x"></figure></a>
-<a href="./Poster_2_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_2_Letter_Web1x.jpg 1x, Poster_2_Letter_Web2x.jpg 2x"></figure></a>
-<a href="./Poster_3_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_3_Letter_Web1x.jpg 1x, Poster_3_Letter_Web2x.jpg 2x"></figure></a></p>
+                <p><a href="./Poster_1_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_1_Letter_Web1x.jpg 1x, Poster_1_Letter_Web2x.jpg 2x"></figure></a>
+                <a href="./Poster_2_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_2_Letter_Web1x.jpg 1x, Poster_2_Letter_Web2x.jpg 2x"></figure></a>
+                <a href="./Poster_3_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_3_Letter_Web1x.jpg 1x, Poster_3_Letter_Web2x.jpg 2x"></figure></a></p>
 
-<h3>Español</h3>
+                <h3>Español</h3>
 
-<p><a href="./Espanol_Poster_1_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_1_Letter_Web1x.jpg 1x, Espanol_Poster_1_Letter_Web2x.jpg 2x"></figure></a>
-<a href="./Espanol_Poster_2_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_2_Letter_Web1x.jpg 1x, Espanol_Poster_2_Letter_Web2x.jpg 2x"></figure></a>
-<a href="./Espanol_Poster_3_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_3_Letter_Web1x.jpg 1x, Espanol_Poster_3_Letter_Web2x.jpg 2x"></figure></a></p>
+                <p><a href="./Espanol_Poster_1_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_1_Letter_Web1x.jpg 1x, Espanol_Poster_1_Letter_Web2x.jpg 2x"></figure></a>
+                <a href="./Espanol_Poster_2_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_2_Letter_Web1x.jpg 1x, Espanol_Poster_2_Letter_Web2x.jpg 2x"></figure></a>
+                <a href="./Espanol_Poster_3_Letter.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_3_Letter_Web1x.jpg 1x, Espanol_Poster_3_Letter_Web2x.jpg 2x"></figure></a></p>
 
-<hr />
+                <hr />
 
-<h2>Letter Size (8.5&Prime; &times; 11&Prime;) Black and White Posters</h2>
+                <h2>Letter Size (8.5&Prime; &times; 11&Prime;) Black and White Posters</h2>
 
-<h3>English</h3>
+                <h3>English</h3>
 
-<p><a href="./Poster_1_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_1_Letter_BW_Web1x.jpg 1x, Poster_1_Letter_BW_Web2x.jpg 2x"></figure></a>
-<a href="./Poster_2_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_2_Letter_BW_Web1x.jpg 1x, Poster_2_Letter_BW_Web2x.jpg 2x"></figure></a>
-<a href="./Poster_3_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_3_Letter_BW_Web1x.jpg 1x, Poster_3_Letter_BW_Web2x.jpg 2x"></figure></a></p>
+                <p><a href="./Poster_1_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_1_Letter_BW_Web1x.jpg 1x, Poster_1_Letter_BW_Web2x.jpg 2x"></figure></a>
+                <a href="./Poster_2_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_2_Letter_BW_Web1x.jpg 1x, Poster_2_Letter_BW_Web2x.jpg 2x"></figure></a>
+                <a href="./Poster_3_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Poster_3_Letter_BW_Web1x.jpg 1x, Poster_3_Letter_BW_Web2x.jpg 2x"></figure></a></p>
 
-<h3>Español</h3>
+                <h3>Español</h3>
 
-<p><a href="./Espanol_Poster_1_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_1_Letter_BW_Web1x.jpg 1x, Espanol_Poster_1_Letter_BW_Web2x.jpg 2x"></figure></a>
-<a href="./Espanol_Poster_2_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_2_Letter_BW_Web1x.jpg 1x, Espanol_Poster_2_Letter_BW_Web2x.jpg 2x"></figure></a>
-<a href="./Espanol_Poster_3_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_3_Letter_BW_Web1x.jpg 1x, Espanol_Poster_3_Letter_BW_Web2x.jpg 2x"></figure></a></p>
+                <p><a href="./Espanol_Poster_1_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_1_Letter_BW_Web1x.jpg 1x, Espanol_Poster_1_Letter_BW_Web2x.jpg 2x"></figure></a>
+                <a href="./Espanol_Poster_2_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_2_Letter_BW_Web1x.jpg 1x, Espanol_Poster_2_Letter_BW_Web2x.jpg 2x"></figure></a>
+                <a href="./Espanol_Poster_3_Letter_BW.pdf"><figure class="bleed"><img src="resources/Header.png" srcset="Espanol_Poster_3_Letter_BW_Web1x.jpg 1x, Espanol_Poster_3_Letter_BW_Web2x.jpg 2x"></figure></a></p>
+
+                <p>Poster Designs: Abhimat Gautam<br>Thank you Jesus Salas for Spanish translations!</p>
 			</article> <!-- Main Text /block -->
 			
 		</section><!-- /blocks -->
