Easter Egg: Make Logo Cool

--- a/about/index.html
+++ b/about/index.html
@@ -31,7 +31,9 @@
 			<div class="logo-container">
 				<object type="image/svg+xml"
 				    width=95%
-				    data="../ColorLogo.svg">
+				    data="../ColorLogo.svg"
+                    onmouseover="this.data='../CoolColorLogo.svg'"
+                    onmouseout="this.data='../ColorLogo.svg'">
 				  <span/></object>
 			  </div>
 			<!-- <img src="ColorLogo.svg" alt="EYU Color Logo"> -->
