--- a/downloads/index.html
+++ b/downloads/index.html
@@ -31,9 +31,11 @@
 			<div class="logo-container">
 				<object type="image/svg+xml"
 				    width=95%
-				    data="../ColorLogo.svg">
+				    data="../ColorLogo.svg"
+                    onmouseover="this.data='../CoolColorLogo.svg'"
+                    onmouseout="this.data='../ColorLogo.svg'">
 				  <span/></object>
-			  </div>
+			</div>
 			<!-- <img src="ColorLogo.svg" alt="EYU Color Logo"> -->
 		</figure>
 		<div class="info-panel">
