--- a/about/index.html
+++ b/about/index.html
@@ -77,7 +77,88 @@
                 <li><strong>Oscar Campos</strong><br>Public Talks Coordinator<br>UCLA, Department of Biology</li>
                 <li><strong>Breann Sitarski</strong><br>Social Media Coordinator<br>UCLA, Department of Physics and Astronomy</li>
                 </ul>
-			</article> <!-- Main Text /block -->			
+			</article> <!-- Main Text /block -->
+			<article class="block"><!-- Sponsor block -->
+				<center><h3><strong>EYU 2016</strong> is sponsored by</h3></center>
+				<!-- Supergiant Sponsors -->
+				<center><p><em>Supergiant Sponsors</em></p></center>
+				<table class="sponsor-first">
+					<tbody>
+						<tr>
+							<td>
+								<img width=60% src="../SponsorLogos/UCLACollegePhysicalSciences.png">
+							</td>
+							<td>
+								<h3>Mani L. Bhaumik</h3><h4>Institute for Theoretical Physics</h4>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+				
+				<!-- Galaxy Sponsors -->
+				<hr>
+				<center><p><em>Galaxy Sponsor</em></p></center>
+				<table class="sponsor-first">
+					<tbody>
+						<tr>
+							<td class="full">
+								<center><object type="image/svg+xml"
+								    width=45%
+								    data="../SponsorLogos/GCG_Logo.svg">
+								  <span/></object></center>
+							</td>
+							<!-- <td>
+								<h4 class="emptySponsor">&#x25CC;</h4>
+							</td> -->
+						</tr>
+						<!-- <tr>
+							<td><h4>Department 1</h4></td>
+							<td><h4>Department 2</h4></td>
+						</tr> -->
+					</tbody>
+				</table>
+				
+				<!-- Shooting Star Sponsors -->
+				<hr>
+				<center><p><em>Shooting Star Sponsors</em></p></center>
+				<table class="sponsor-first">
+					<tbody>
+						<tr>
+							<td>
+								<center><object type="image/svg+xml"
+								    width=68%
+								    data="../SponsorLogos/ps_PA_blu_cmyk.svg">
+								  <span/></object></center>
+							</td>
+							<td>
+								<center><object type="image/svg+xml"
+								    width=100%
+								    data="../SponsorLogos/ps_EPSS_blu_cymk.svg">
+								  <span/></object></center>
+							</td>
+						</tr>
+        			</tbody>
+        		</table>
+				<table class="sponsor">
+					<tbody>	
+						<tr>
+							<td class="full">
+								<center><object type="image/svg+xml"
+								    width=30%
+								    data="../SponsorLogos/Celestron.svg">
+								  <span/></object></center>
+							</td>
+							<!-- <td>
+								<h4 class="emptySponsor">&#x25CC;</h4>
+							</td> -->
+						</tr>
+						<!-- <tr>
+							<td><h4>Department 1</h4></td>
+							<td><h4>Department 2</h4></td>
+						</tr> -->
+					</tbody>
+				</table>
+			</article> <!-- Sponsor /block -->
 		</section><!-- /blocks -->
 	</div> <!-- /content -->
 
